updated portfolio with 3d model and info

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,19 @@
 All colors MUST be HSL.
 */
 
+.scrollbar-hide {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
